# f1gp

./: .gitignore  Cargo.toml  README.md
src/: driver_standings.rs  error.rs  main.rs  quali.rs  race.rs  results.rs  schedule.rs  sprint_results.rs  standings.rs  utils.rs
src/standings/: driver_standings.rs  mod.rs  team_standings.rs
