[package]
name = "f1gp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
scraper = "0.23.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ureq = { version = "2.9.6", features = ["json"] }
